--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,255 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Manrope:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Product+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+/* Global */
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: #FDFDFD;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  text-decoration: none;
+}
+
+h1 {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 4em;
+}
+
+h2 {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 2.25em;
+}
+
+
+p {
+  font-family: "Manrope";
+  font-weight: 300;
+  color: #2E2E2E;
+}
+
+strong {
+  font-weight: 500;
+}
+
+#dark {
+  color: #FBFBFB;
+}
+
+#subheader {
+  font-family: "Product Sans";
+  font-weight: 300;
+  color: #DFDFDF;
+  margin: 0;
+
+}
+
+/* Navbar */
+.navbar-wrapper {
+  margin: 1vh 3vw 0 0;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.nav-link {
+  font-family: "Product Sans";
+  font-weight: 300;
+  text-transform: lowercase;
+  font-size: 1.1em;
+}
+
+/* Header */
+.header-wrapper {
+  height: 350px;
+  margin-bottom: 5vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.header {
+  text-align: center;
+}
+
+.icons svg {
+  display: inline;
+  margin-right: 0.5vw;
+}
+
+.icons a {
+  color: black;
+}
+
+.icons a:hover {
+  color: #0d6efd;
+}
+
+/* About */
+.about-wrapper {
+  padding: 0 5vw 0 5vw;
+  background: #181A20;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.about-text {
+  width: 80%;
+}
+
+.about-image img {
+  width: 100%;
+  height: auto;
+  padding-right: 5px;
+}
+
+.about-content {
+  padding-left: 5px;
+}
+
+/* Projects */
+.projects-wrapper {
+  margin-top: 7.5vh;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.projects-header {
+  text-align: center;
+}
+
+.projects {
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+}
+
+.project-item {
+  padding: 3.5vh 0 3.5vh 0;
+  border-bottom: 1px solid #DFDFDF;
+}
+
+/* Blog (Featured) */
+.blog-posts-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: -7.5vh;
+  padding-bottom: 5vh;
+}
+
+.featured-blog-content {
+  height: 100%;
+  font-size: 1.15em;
+}
+
+.featured-blog-content#small {
+  height: 100%;
+  font-size: 1.15em;
+  padding-top: 0.5vh;
+}
+
+.featured-blog-image {
+  width: 100%;
+  height: auto;
+}
+
+.featured-blog-image#small {
+  width: 75%;
+}
+
+.featured-blog-meta {
+  display: flex;
+  align-items: flex-end;
+}
+
+.featured-blog-meta p {
+  margin: 0;
+  font-family: "Product Sans";
+}
+
+.featured-blog-post h2#title {
+  font-size: 1.75em;
+}
+
+.featured-blog-post#small {
+  margin-top: 10vh;
+}
+
+.featured-blog-body p {
+  color: #3A3A3A;
+}
+
+.featured-blog-image#small {
+  width: 100%;
+  height: auto;
+}
+.featured-blog-post#small h3 {
+  font-size: 1.5em;
+  padding-top: 2.5vh;
+}
+.featured-blog-body#small p {
+  font-size: 1em;
+}
+
+.featured-blog-post a {
+
+}
+
+/* Blog */
+.blog-post {
+  display: flex;
+  justify-content: center;
+}
+
+img.blog-image {
+  width: 100%;
+}
+
+.blog-author {
+  display: flex;
+}
+
+.blog-body {
+  margin-top: 5vh;
+}
+
+.blog-tags {
+  font-family: "Product Sans";
+  font-weight: 500;
+}
+
+.blog-post {
+  margin-top: 10vh;
+}
+
+span#blog-tag {
+  font-weight: 300;
+}
+
+p#name {
+  font-family: "Product Sans";
+  font-weight: 500;
+
+}
+
+p#date {
+  margin-left: 0.5vw;
+  font-family: "Product Sans";
+  font-weight: 300;
+
+}
+
+
+/* Media Queries */
+@media only screen and (max-width: 600px) {
+  .about-image img {
+    display: none;
+  }
+
+
 }
