--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,13 @@ h2 {
 }
 
 h3 {
+    font-family: "Poppins";
+    font-weight: 500;
+    font-size: 1.5em;
+    color: #FFFFFF;
+}
+
+a h3 {
   font-family: "Poppins";
   font-weight: 500;
   font-size: 1.5em;
@@ -148,7 +155,7 @@ strong {
 }
 
 .about-text {
-  width: 80%;
+  width: 95%;
 }
 
 .about-image img {
